{
  "version": 4,
  "terraform_version": "1.5.2",
  "serial": 14,
  "lineage": "9557f261-509b-4989-8163-22e2b4d3bee3",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "sprints_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ef4e3edaf553f6a8",
            "domain": "vpc",
            "id": "eipalloc-0ef4e3edaf553f6a8",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-34-232-180-169.compute-1.amazonaws.com",
            "public_ip": "34.232.180.169",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "instances",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "Private_Instance",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-01e076d5c9e040974",
            "arn": "arn:aws:ec2:us-east-1:812428914503:instance/i-0922af94c7ba86512",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0922af94c7ba86512",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "amora",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0e9072708f5f5abb3",
            "private_dns": "ip-10-0-1-64.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.64",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-024ff2eeebf9e31b6",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c34f58a6e81aa73f",
            "tags": {
              "Name": "Private_Instance"
            },
            "tags_all": {
              "Name": "Private_Instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-087d41880cccb0f01"
            ]
          },
          "dependencies": [
            "aws_security_group.sprints_sg",
            "aws_subnet.subnets",
            "aws_vpc.sprints_vpc",
            "data.aws_ami.ubuntu"
          ]
        },
        {
          "index_key": "Public_Instance",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-01e076d5c9e040974",
            "arn": "arn:aws:ec2:us-east-1:812428914503:instance/i-08c5107a67b74394a",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08c5107a67b74394a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "amora",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-02c397f625e041314",
            "private_dns": "ip-10-0-0-187.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.187",
            "public_ip": "54.160.16.12",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0871c326efa3fcc85",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0183a7398d2c249be",
            "tags": {
              "Name": "Public_Instance"
            },
            "tags_all": {
              "Name": "Public_Instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-087d41880cccb0f01"
            ]
          },
          "dependencies": [
            "aws_security_group.sprints_sg",
            "aws_subnet.subnets",
            "aws_vpc.sprints_vpc",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "sprints_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:812428914503:internet-gateway/igw-03488a0acaeb9235a",
            "id": "igw-03488a0acaeb9235a",
            "owner_id": "812428914503",
            "tags": {
              "Name": "Sprints-IGW"
            },
            "tags_all": {
              "Name": "Sprints-IGW"
            },
            "vpc_id": "vpc-08b012cd3563146af"
          },
          "dependencies": [
            "aws_vpc.sprints_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "sprints_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ef4e3edaf553f6a8",
            "association_id": "eipassoc-0169b7857aba1e071",
            "connectivity_type": "public",
            "id": "nat-06b8c7498d9e027c6",
            "network_interface_id": "eni-00610e27abff596a5",
            "private_ip": "10.0.0.178",
            "public_ip": "34.232.180.169",
            "subnet_id": "subnet-0183a7398d2c249be",
            "tags": {
              "Name": "Sprints-NAT"
            },
            "tags_all": {
              "Name": "Sprints-NAT"
            }
          },
          "dependencies": [
            "aws_eip.sprints_eip",
            "aws_subnet.subnets",
            "aws_vpc.sprints_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:812428914503:route-table/rtb-0b7e97ebb4cb02292",
            "id": "rtb-0b7e97ebb4cb02292",
            "owner_id": "812428914503",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-06b8c7498d9e027c6",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Private-RT"
            },
            "tags_all": {
              "Name": "Private-RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-08b012cd3563146af"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.sprints_eip",
            "aws_nat_gateway.sprints_nat",
            "aws_subnet.subnets",
            "aws_vpc.sprints_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:812428914503:route-table/rtb-0f5b5ff756d48e7c8",
            "id": "rtb-0f5b5ff756d48e7c8",
            "owner_id": "812428914503",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03488a0acaeb9235a",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public-RT"
            },
            "tags_all": {
              "Name": "Public-RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-08b012cd3563146af"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.sprints_igw",
            "aws_vpc.sprints_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03411c08fc5c1cbc0",
            "route_table_id": "rtb-0b7e97ebb4cb02292",
            "subnet_id": "subnet-0c34f58a6e81aa73f"
          },
          "dependencies": [
            "aws_eip.sprints_eip",
            "aws_nat_gateway.sprints_nat",
            "aws_route_table.private_route_table",
            "aws_subnet.subnets",
            "aws_vpc.sprints_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ac926f9df7ee43f1",
            "route_table_id": "rtb-0f5b5ff756d48e7c8",
            "subnet_id": "subnet-0183a7398d2c249be"
          },
          "dependencies": [
            "aws_internet_gateway.sprints_igw",
            "aws_route_table.public_route_table",
            "aws_subnet.subnets",
            "aws_vpc.sprints_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sprints_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:812428914503:security-group/sg-087d41880cccb0f01",
            "description": "Security group for instances in Sprints VPC",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-087d41880cccb0f01",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "Security_Sprints",
            "name_prefix": "",
            "owner_id": "812428914503",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-08b012cd3563146af"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.sprints_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "private",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:812428914503:subnet/subnet-0c34f58a6e81aa73f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c34f58a6e81aa73f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "812428914503",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private_Sub_Sprints"
            },
            "tags_all": {
              "Name": "Private_Sub_Sprints"
            },
            "vpc_id": "vpc-08b012cd3563146af"
          },
          "dependencies": [
            "aws_vpc.sprints_vpc"
          ]
        },
        {
          "index_key": "public",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:812428914503:subnet/subnet-0183a7398d2c249be",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0183a7398d2c249be",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "812428914503",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public_Sub_Sprints"
            },
            "tags_all": {
              "Name": "Public_Sub_Sprints"
            },
            "vpc_id": "vpc-08b012cd3563146af"
          },
          "dependencies": [
            "aws_vpc.sprints_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "sprints_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:812428914503:vpc/vpc-08b012cd3563146af",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-077a301220901c6a2",
            "default_route_table_id": "rtb-0415772ebe309f4df",
            "default_security_group_id": "sg-04bb9f3ce8833a21b",
            "dhcp_options_id": "dopt-0f44bdb3fe8f287fa",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-08b012cd3563146af",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0415772ebe309f4df",
            "owner_id": "812428914503",
            "tags": {
              "Name": "Sprints"
            },
            "tags_all": {
              "Name": "Sprints"
            }
          }
        }
      ]
    }
  ]
}